Create dropdown menu for each user page

--- a/frontend/src/components/PopulatedNavBar.module.scss
+++ b/frontend/src/components/PopulatedNavBar.module.scss
@@ -3,6 +3,7 @@
   aspect-ratio: 1;
   backdrop-filter: brightness(50%);
   display: flex;
+  color: #ffffff;
   align-items: center;
   justify-content: center;
   width: 2em;
