--- a/frontend/src/components/nav/Nav.module.scss
+++ b/frontend/src/components/nav/Nav.module.scss
@@ -6,7 +6,7 @@
     width: 100%;
     background-color: rgb(48, 48, 48);
     align-items: center;
-    color: aliceblue;
+    color: #ffffff;
     font-size: 1.5em;
     font-weight: bold;
     transition: top 0.5s;
@@ -41,7 +41,7 @@
     visibility: hidden;
     display: flex;
     flex-direction: column;
-    background-color: darkblue;
+    background-color: rgb(48, 48, 48);
     position: absolute;
     top: 100%;
     right: 0;
