[feat] add scss for button component

--- a/frontend/src/components/button-custom/button-custom.module.scss
+++ b/frontend/src/components/button-custom/button-custom.module.scss
@@ -1,4 +1,9 @@
-.button-custom{
+.buttoncustom{
+    width: auto;
     color: #e0e0e0;
+    border: solid;
+    border-color: white;
+    padding: 10px 15px;
+    text-align: center;
     font-family: Arial, sans-serif;
 }
