--- a/frontend/src/components/analyst/AnalystTable/table.module.scss
+++ b/frontend/src/components/analyst/AnalystTable/table.module.scss
@@ -101,7 +101,34 @@
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+/* Assuming this is in your CSS module or stylesheet */
+.analyseButton {
+  display: flex; /* Align icon and text */
+  align-items: center; /* Center vertically */
+  background-color: #007bff; /* Button color */
+  color: white; /* Text color */
+  border: none; /* Remove default border */
+  border-radius: 5px; /* Rounded corners */
+  padding: 10px 15px; /* Padding for a better size */
+  cursor: pointer; /* Pointer on hover */
+  transition: background-color 0.3s ease; /* Smooth transition */
+}
 
+.analyseButton:hover {
+  background-color: #0056b3; /* Darker blue on hover */
+}
+
+.icon {
+  margin-right: 5px; /* Space between icon and text */
+}
+.table a {
+  color: #87c1ff; /* Change to your preferred color */
+  text-decoration: underline; /* Underline the text */
+  &:hover {
+      color: #0091ff; /* Darker shade for hover effect */
+      text-decoration: underline; /* Ensure underline on hover */
+  }
+}
 .table {
   width: 100%;
   min-width: 100%; 
